# niblr-agentic-service

./: .dockerignore  .env.example  .gitignore  README.md  agent_api.py  agent_deploy.py  agent_ui.py  pyproject.toml  requirements.txt  tools.yaml
agents/currency_agent/: __main__.py  agent_executor.py
agents/job_hunting/: agent.py  agent_executor.py
agents/job_hunting/sub_agents/: __init__.py
agents/job_hunting/sub_agents/job_listing/: __init__.py  agent.py
agents/job_hunting_agent/: Dockerfile  README.md  __init__.py  __main__.py  agent.py  agent_executor.py  deploy.sh  mock_jobs.py  pyproject.toml  test_client.py
agents/property_hunting_agent/: .gcloudignore  Dockerfile  README.md  __main__.py  agent.py  agent_executor.py  deploy.sh  pyproject.toml  score_tool.py  test_client.py
agents/property_hunting_agent/sub_agents/: __init__.py
agents/property_hunting_agent/sub_agents/filter/: __init__.py  agent.py
agents/property_hunting_agent/sub_agents/property_listing/: __init__.py  agent.py
agents/property_hunting_agent/sub_agents/score/: __init__.py  agent.py
api/: .dockerignore  .gcloudignore  Dockerfile  QUICKSTART.md  README.md  __init__.py  __main__.py  cloudbuild.yaml  deploy-cloudrun.sh  docker-compose.cloudsql.yml  docker-compose.yml  pyproject.toml  setup-cloudsql-user.sh
api/bash_script/: restart-containers.sh  restart-docker.sh  test_agent.sh
api/src/: __init__.py  auth.py  auth_endpoints.py  bigquery_client.py  catalog_endpoints.py  config.py  database.py  db_models.py  endpoints.py  models.py  response_processor.py  session_endpoints.py  subscription_utils.py  utils.py
docs/: MCP_SERVER_DEPLOYMENT.md
host_agent/: __main__.py  agent.py  routing_agent.py
niblr_agentic_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
router_agent/: .env.example  agent.py  remote_agent_connection.py  routing_agent.py
